--- a/html/portfolio/index.html
+++ b/html/portfolio/index.html
@@ -34,16 +34,28 @@
             </div>
             <nav id="main-nav">
                 <ul class="md:flex">
-                    <li class="px-5 py-3 text-center  md:block rounded-md transition ease-in-out duration-300 hover:bg-slate-500"><a href="../../html/index.html">Home</a></li>
-                    <li class="px-5 py-3 text-center  md:block rounded-md transition ease-in-out duration-300 hover:bg-slate-500"><a href="../../html/portfolio/index.html">Portfolio</a>
+                    <li
+                        class="px-5 py-3 text-center  md:block rounded-md transition ease-in-out duration-300 hover:bg-slate-500">
+                        <a href="../../html/index.html">Home</a></li>
+                    <li
+                        class="px-5 py-3 text-center  md:block rounded-md transition ease-in-out duration-300 hover:bg-slate-500">
+                        <a href="../../html/portfolio/index.html">Portfolio</a>
                     </li>
-                    <li class="px-5 py-3 text-center  md:block rounded-md transition ease-in-out duration-300 hover:bg-slate-500"><a href="../../html/articles/index.html">Articles</a>
+                    <li
+                        class="px-5 py-3 text-center  md:block rounded-md transition ease-in-out duration-300 hover:bg-slate-500">
+                        <a href="../../html/articles/index.html">Articles</a>
                     </li>
-                    <li class="px-5 py-3 text-center  md:block rounded-md transition ease-in-out duration-300 hover:bg-slate-500"><a href="../../html/about/index.html">About</a>
+                    <li
+                        class="px-5 py-3 text-center  md:block rounded-md transition ease-in-out duration-300 hover:bg-slate-500">
+                        <a href="../../html/about/index.html">About</a>
                     </li>
-                    <li class="px-5 py-3 text-center  md:block rounded-md transition ease-in-out duration-300 hover:bg-slate-500"><a href="../../html/resume/index.html">Resume</a>
+                    <li
+                        class="px-5 py-3 text-center  md:block rounded-md transition ease-in-out duration-300 hover:bg-slate-500">
+                        <a href="../../html/resume/index.html">Resume</a>
                     </li>
-                    <li class="px-5 py-3 text-center  md:block rounded-md transition ease-in-out duration-300 hover:bg-slate-500"><a href="../../html/contact/index.html">Contact</a>
+                    <li
+                        class="px-5 py-3 text-center  md:block rounded-md transition ease-in-out duration-300 hover:bg-slate-500">
+                        <a href="../../html/contact/index.html">Contact</a>
                     </li>
                 </ul>
             </nav>
@@ -78,7 +90,7 @@
                                     class="md:max-w-60">
                             </figure>
                             <figcaption class="md:pl-10">
-                                <h3 class="text-xl text-teal-300">Full Stack Web App</h3>
+                                <h3 class="text-xl text-teal-300">Reddit Clone Full Stack Web App</h3>
                                 <p class="text-gray-400">This project is a full-stack web app written in Node Express,
                                     React Vite and MongoDB
                                     that uses json web
