--- a/html/index.html
+++ b/html/index.html
@@ -17,9 +17,13 @@
     <script src="../script/menu.js" defer="defer"></script>
     <link rel="apple-touch-icon" sizes="72x72" href="apple-touch-icon.png">
     <link rel="shortcut icon" type="image/png" sizes="24x24" href="favicon-24x24.png">
-    <link rel="shotcut icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
+    <link rel="shortcut icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
     <link rel="manifest" href="site.webmanifest">
     <link rel="mask-icon" href="safari-pinned-tab.svg" color="#5bbad5">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Karla:ital,wght@0,200..800;1,200..800&display=swap"
+        rel="stylesheet">
     <meta name="msapplication-TileColor" content="#da524c">
     <meta name="theme-color" content="#ffffff">
 </head>
@@ -65,7 +69,8 @@
             <div class=" py-2 md:flex mx-auto">
                 <div class="my-10 pr-10 md:border-r-2 flex-1">
                     <div class="sticky top-20 z-30">
-                        <h1 class="text-6xl" id="">Hi, I'm <span class="text-teal-300">Paul</span></h1>
+                        <h1 class=" text-4xl md:text-6xl font-bold primary-font" id="">Hi, I'm <span
+                                class="text-teal-300">Paul</span></h1>
                         <h2 class="text-2xl py-2">Full Stack Software Engineer</h2>
                         <p class="py-2 text-gray-400">I am a full stack developer based in Vancouver, British Columbia,
                             Canada. I build modern websites using Express.js, Next.js, React.js, and Node.js.</p>
