--- a/html/index.html
+++ b/html/index.html
@@ -16,8 +16,8 @@
     <script src="../script/jquery-3.7.0.min.js" defer="defer"></script>
     <script src="../script/menu.js" defer="defer"></script>
     <link rel="apple-touch-icon" sizes="72x72" href="apple-touch-icon.png">
-    <link rel="shortcut icon" type="image/png" sizes="24x24" href="https://capy-tech.com/html/favicon-24x24.png">
-    <link rel="shortcut icon" type="image/png" sizes="16x16" href="https://capy-tech.com/html/favicon-16x16.png">
+    <link rel="shortcut icon" type="image/png" sizes="24x24" href="favicon-24x24.png">
+    <link rel="shortcut icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
     <link rel="manifest" href="site.webmanifest">
     <link rel="mask-icon" href="safari-pinned-tab.svg" color="#5bbad5">
     <link rel="preconnect" href="https://fonts.googleapis.com">
