--- a/html/index.html
+++ b/html/index.html
@@ -128,16 +128,17 @@
                     </div>
                 </div>
                 <div class="py-10 flex-1">
-                    <p class="md:pl-10 md:border-l-2 py-2 text-gray-400">I have recently completed the <strong>Applied
+                    <p class="md:pl-10 md:border-l-2 py-2 text-gray-400">I have recently completed the <strong
+                            class="text-white">Applied
                             Software
-                            Development</strong> and <strong>Applied
+                            Development</strong> and <strong class="text-white">Applied
                             Web Development</strong> certificates at British
                         Columbia Institute
                         of Technology (BCIT) and currently I am working
                         towards the Applied Computer Information Systems
                         certificate and Computer Systems Diploma concurrently.</p>
                     <h2 class="md:pl-10 md:border-l-2 text-2xl py-2">My tech stack</h2>
-                    <div class="md:pl-10 md:border-l-2 grid grid-cols-3 py-10 md:gap-3 ">
+                    <div class="md:pl-10 md:border-l-2 grid grid-cols-3 py-10 ">
                         <a href="https://www.python.org/" target="_blank"><img src="../html/image/python.png"
                                 alt="Python"
                                 class="mx-auto md:max-w-20 transition-transform ease-in-out duration-300 hover:scale-125"></a>
@@ -170,7 +171,7 @@
                         <a href="https://nextjs.org/" target="_blank"><img src="../html/image/nextjs.jpg" alt="React.js"
                                 class="mx-auto md:max-w-20 transition-transform ease-in-out duration-300 hover:scale-125"></a>
                     </div>
-                    <h2 class="md:pl-10 md: border-l-2 text-2xl py-2">Some things I've built...</h2>
+                    <h2 class="md:pl-10 md:border-l-2 text-2xl py-2">Some things I've built...</h2>
                     <article class="md:pl-10 md:border-l-2 py-10">
                         <a href="https://codingcapy.github.io/capy-finance-client/" target="_blank" class="md:flex">
                             <figure>
