--- a/html/index.html
+++ b/html/index.html
@@ -32,8 +32,8 @@
 </head>
 
 <body>
-    <div class="flex flex-col min-h-screen mx-auto px-1 py-1 bg-slate-800 text-white">
-        <header class="md:flex bg-slate-800 sticky top-1 z-50">
+    <div class="flex flex-col min-h-screen mx-auto bg-slate-800 text-white">
+        <header class="md:flex bg-slate-800 px-2 py-2 sticky top-0 z-50">
             <div class="flex justify-between">
                 <a href="./index.html"><img src="../html/image/capyness.png" alt="Capytech Icon" class="max-w-10"></a>
                 <button id="hamburger-menu" class="text-3xl md:hidden" id="hamburger-menu">&#127828;</button>
