--- a/html/portfolio/index.html
+++ b/html/portfolio/index.html
@@ -64,7 +64,27 @@
             <div class=" py-2 max-w-6xl mx-auto">
                 <h2 class="text-4xl text-center py-10">Current Projects</h2>
                 <div id="current-projects-section">
-                    <article class="py-10">
+                    <article class="py-2">
+                        <a href="https://codingcapy.github.io/capytalk/" target="_blank" class="md:flex">
+                            <figure>
+                                <img src="../image/capytalk.jpg" alt="Banking System Prototype II"
+                                    class="md:max-w-60 transition-transform ease-in-out duration-300 md:hover:scale-110">
+                            </figure>
+                            <figcaption class="md:pl-10">
+                                <div class="flex">
+                                    <h3 class="text-xl text-teal-300 pr-1">Full Stack Chat App </h3>
+                                </div>
+                                <p class="text-gray-400">This project is a fully functional live chat application written in Node Express,
+                                    React Vite and MongoDB
+                                    that
+                                    uses json web
+                                    token user authentication and socket.io.</p>
+                                <p class="tertiary-font pt-3">Stack: Node, Express, React, ChartJS, Vite, MongoDB,
+                                    Render</p>
+                            </figcaption>
+                        </a>
+                    </article>
+                    <article class="py-2">
                         <a href="https://codingcapy.github.io/capy-finance-client/" target="_blank" class="md:flex">
                             <figure>
                                 <img src="../image/capyfinance.jpg" alt="Banking System Prototype II"
