--- a/html/index.html
+++ b/html/index.html
@@ -173,6 +173,26 @@
                     </div>
                     <h2 class="md:pl-10 md:border-l-2 text-2xl py-2">Some things I've built...</h2>
                     <article class="md:pl-10 md:border-l-2 py-10">
+                        <a href="https://codingcapy.github.io/capytalk/" target="_blank" class="md:flex">
+                            <figure>
+                                <img src="./image/capytalk.jpg" alt="Banking System Prototype II"
+                                    class="md:max-w-60 transition-transform ease-in-out duration-300 md:hover:scale-110">
+                            </figure>
+                            <figcaption class="md:pl-10">
+                                <div class="flex">
+                                    <h3 class="text-xl text-teal-300 pr-1">Full Stack Chat App </h3>
+                                </div>
+                                <p class="text-gray-400">This project is a fully functional live chat application written in Node Express,
+                                    React Vite and MongoDB
+                                    that
+                                    uses json web
+                                    token user authentication and socket.io.</p>
+                                <p class="tertiary-font pt-3">Stack: Node, Express, React, ChartJS, Vite, MongoDB,
+                                    Render</p>
+                            </figcaption>
+                        </a>
+                    </article>
+                    <article class="md:pl-10 md:border-l-2 py-10">
                         <a href="https://codingcapy.github.io/capy-finance-client/" target="_blank" class="md:flex">
                             <figure>
                                 <img src="./image/capyfinance.jpg" alt="Banking System Prototype II"
@@ -182,11 +202,11 @@
                                 <div class="flex">
                                     <h3 class="text-xl text-teal-300 pr-1">Personal Finance Full Stack Web App </h3>
                                 </div>
-                                <p class="text-gray-400">This project is a full-stack web app written in Node Express,
+                                <p class="text-gray-400">This project is a full-stack financial plan generating web app written in Node Express,
                                     React Vite and MongoDB
                                     that
                                     uses json web
-                                    token user authentication and allows users to create financial plans.</p>
+                                    token user authentication and chartJS.</p>
                                 <p class="tertiary-font pt-3">Stack: Node, Express, React, ChartJS, Vite, MongoDB,
                                     Render</p>
                             </figcaption>
@@ -200,7 +220,7 @@
                             </figure>
                             <figcaption class="md:pl-10">
                                 <div class="flex">
-                                    <h3 class="text-xl text-teal-300 pr-1">Reddit Clone Full Stack Web App </h3>
+                                    <h3 class="text-xl text-teal-300 pr-1">Social Platform Full Stack Web App </h3>
                                 </div>
                                 <p class="text-gray-400">This project is a full-stack web app written in Node Express,
                                     React Vite and MongoDB
@@ -208,7 +228,7 @@
                                     uses json web
                                     token user authentication and allows users to post, comment, reply, and vote similar
                                     to
-                                    forums like Reddit.</p>
+                                    platforms like Reddit.</p>
                                 <p class="tertiary-font pt-3">Stack: Node, Express, React, Vite, MongoDB, Railway</p>
                             </figcaption>
                         </a>
