--- a/html/portfolio/index.html
+++ b/html/portfolio/index.html
@@ -122,6 +122,25 @@
                         </a>
                     </article>
                     <article class="py-2">
+                        <a href="https://capynext.vercel.app/" target="_blank" class="md:flex">
+                            <figure>
+                                <img src="../image/capynext.jpg" alt="Banking System Prototype II"
+                                    class="md:max-w-60 transition-transform ease-in-out duration-300 md:hover:scale-110">
+                            </figure>
+                            <figcaption class="md:pl-10">
+                                <div class="flex">
+                                    <h3 class="text-xl text-teal-300 pr-1">NextJS Serverless Social Platform</h3>
+                                </div>
+                                <p class="text-gray-400">This project is a full-stack web app written in NextJS 14 and MongoDB
+                                    that
+                                    uses next-auth user authentication and allows users to post, comment, reply, and vote similar
+                                    to
+                                    platforms like Reddit.</p>
+                                <p class="tertiary-font pt-3">Stack: NextJS 14, MongoDB, Vercel</p>
+                            </figcaption>
+                        </a>
+                    </article>
+                    <article class="py-2">
                         <a href="https://codingcapy.github.io/capytech-react" target="_blank" class="md:flex">
                             <figure>
                                 <img src="../image/react-project.jpg" alt="Banking System Prototype II"
