--- a/html/index.html
+++ b/html/index.html
@@ -187,8 +187,8 @@
                                     that
                                     uses json web
                                     token user authentication and socket.io.</p>
-                                <p class="tertiary-font pt-3">Stack: Node, Express, React, ChartJS, Vite, MongoDB,
-                                    Render</p>
+                                <p class="tertiary-font pt-3">Stack: Node, Express, React, socket.io, Vite, MongoDB,
+                                    Railway</p>
                             </figcaption>
                         </a>
                     </article>
