--- a/html/index.html
+++ b/html/index.html
@@ -173,21 +173,21 @@
                     </div>
                     <h2 class="md:pl-10 md:border-l-2 text-2xl py-2">Some things I've built...</h2>
                     <article class="md:pl-10 md:border-l-2 py-10">
-                        <a href="https://codingcapy.github.io/capytalk/" target="_blank" class="md:flex">
+                        <a href="https://codingcapy.github.io/capychat/" target="_blank" class="md:flex">
                             <figure>
-                                <img src="./image/capytalk.jpg" alt="Banking System Prototype II"
+                                <img src="./image/capychat.jpg" alt="CapyChat"
                                     class="md:max-w-60 transition-transform ease-in-out duration-300 md:hover:scale-110">
                             </figure>
                             <figcaption class="md:pl-10">
                                 <div class="flex">
                                     <h3 class="text-xl text-teal-300 pr-1">Full Stack Chat App </h3>
                                 </div>
-                                <p class="text-gray-400">This project is a fully functional live chat application written in Node Express,
-                                    React Vite and MongoDB
+                                <p class="text-gray-400">This project is a fully featured fully functional live chat application written in Node Express,
+                                    React Vite and PostgreSQL
                                     that
                                     uses json web
                                     token user authentication and socket.io.</p>
-                                <p class="tertiary-font pt-3">Stack: Node, Express, React, socket.io, Vite, MongoDB,
+                                <p class="tertiary-font pt-3">Stack: Node, Express, React, socket.io, Vite, PostgreSQL,
                                     Railway</p>
                             </figcaption>
                         </a>
@@ -195,7 +195,7 @@
                     <article class="md:pl-10 md:border-l-2 py-10">
                         <a href="https://codingcapy.github.io/capy-finance-client/" target="_blank" class="md:flex">
                             <figure>
-                                <img src="./image/capyfinance.jpg" alt="Banking System Prototype II"
+                                <img src="./image/capyfinance.jpg" alt="CapyFinance"
                                     class="md:max-w-60 transition-transform ease-in-out duration-300 md:hover:scale-110">
                             </figure>
                             <figcaption class="md:pl-10">
@@ -215,7 +215,7 @@
                     <article class="md:pl-10 md:border-l-2 py-10">
                         <a href="https://codingcapy.github.io/cocodogo-client/" target="_blank" class="md:flex">
                             <figure>
-                                <img src="./image/capysocial.jpg" alt="Banking System Prototype II"
+                                <img src="./image/capysocial.jpg" alt="CocoDogo"
                                     class="md:max-w-60 transition-transform ease-in-out duration-300 md:hover:scale-110">
                             </figure>
                             <figcaption class="md:pl-10">
@@ -236,7 +236,7 @@
                     <article class="md:pl-10 md:border-l-2 py-10">
                         <a href="https://capynext.vercel.app/" target="_blank" class="md:flex">
                             <figure>
-                                <img src="./image/capynext.jpg" alt="Banking System Prototype II"
+                                <img src="./image/capynext.jpg" alt="CapyNext"
                                     class="md:max-w-60 transition-transform ease-in-out duration-300 md:hover:scale-110">
                             </figure>
                             <figcaption class="md:pl-10">
@@ -255,7 +255,7 @@
                     <article class="md:pl-10 md:border-l-2 py-10">
                         <a href="https://codingcapy.github.io/capytech-react" target="_blank" class="md:flex">
                             <figure>
-                                <img src="./image/react-project.jpg" alt="Banking System Prototype II"
+                                <img src="./image/react-project.jpg" alt="Capytech React Project"
                                     class="md:max-w-60 transition-transform ease-in-out duration-300 md:hover:scale-110">
                             </figure>
                             <figcaption class="md:pl-10">
@@ -270,7 +270,7 @@
                     <article class="md:pl-10 md:border-l-2 py-10">
                         <a href="./portfolio/portfolio6.html" class="md:flex">
                             <figure>
-                                <img src="./image/red_knight.jpg" alt="Banking System Prototype II"
+                                <img src="./image/red_knight.jpg" alt="JavaScript RPG"
                                     class="md:max-w-60 transition-transform ease-in-out duration-300 md:hover:scale-110">
                             </figure>
                             <figcaption class="md:pl-10">
@@ -287,7 +287,7 @@
                             <article class="py-2">
                                 <figure>
                                     <a href="./articles/article5.html" class="md:flex">
-                                        <img src="./image/web-frameworks.jpg" alt="ChatGPT"
+                                        <img src="./image/web-frameworks.jpg" alt="Web Frameworks"
                                             class="md:max-w-60 transition-transform ease-in-out duration-300 md:hover:scale-110">
                                         <figcaption class="md:pl-10">
                                             <h2 class="text-xl text-teal-300">Frameworks, Modules and Packages</h2>
@@ -305,7 +305,7 @@
                             <article class="py-2">
                                 <figure>
                                     <a href="./articles/article4.html" class="md:flex">
-                                        <img src="./image/programming-languages.JPG" alt="ChatGPT"
+                                        <img src="./image/programming-languages.JPG" alt="Programming Languages"
                                             class="md:max-w-60 transition-transform ease-in-out duration-300 md:hover:scale-110">
                                         <figcaption class="md:pl-10">
                                             <h2 class="text-xl text-teal-300">OOP, Procedural Programming, Data
