--- a/html/portfolio/index.html
+++ b/html/portfolio/index.html
@@ -65,9 +65,9 @@
                 <h2 class="text-4xl text-center py-10">Current Projects</h2>
                 <div id="current-projects-section">
                     <article class="py-2">
-                        <a href="https://codingcapy.github.io/capytalk/" target="_blank" class="md:flex">
+                        <a href="https://codingcapy.github.io/capychat/" target="_blank" class="md:flex">
                             <figure>
-                                <img src="../image/capytalk.jpg" alt="Banking System Prototype II"
+                                <img src="../image/capychat.jpg" alt="CapyChat"
                                     class="md:max-w-60 transition-transform ease-in-out duration-300 md:hover:scale-110">
                             </figure>
                             <figcaption class="md:pl-10">
@@ -75,11 +75,11 @@
                                     <h3 class="text-xl text-teal-300 pr-1">Full Stack Chat App </h3>
                                 </div>
                                 <p class="text-gray-400">This project is a fully functional live chat application written in Node Express,
-                                    React Vite and MongoDB
+                                    React Vite and PostgreSQL
                                     that
                                     uses json web
                                     token user authentication and socket.io.</p>
-                                <p class="tertiary-font pt-3">Stack: Node, Express, React, socket.io, Vite, MongoDB,
+                                <p class="tertiary-font pt-3">Stack: Node, Express, React, socket.io, Vite, PostgreSQL,
                                     Railway</p>
                             </figcaption>
                         </a>
@@ -87,7 +87,7 @@
                     <article class="py-2">
                         <a href="https://codingcapy.github.io/capy-finance-client/" target="_blank" class="md:flex">
                             <figure>
-                                <img src="../image/capyfinance.jpg" alt="Banking System Prototype II"
+                                <img src="../image/capyfinance.jpg" alt="CapyFinance"
                                     class="md:max-w-60 transition-transform ease-in-out duration-300 md:hover:scale-110">
                             </figure>
                             <figcaption class="md:pl-10">
@@ -106,7 +106,7 @@
                     <article class="py-2">
                         <a href="https://codingcapy.github.io/cocodogo-client/" target="_blank" class="md:flex">
                             <figure>
-                                <img src="../image/capysocial.jpg" alt="Banking System Prototype II"
+                                <img src="../image/capysocial.jpg" alt="Cocodogo"
                                     class="md:max-w-60">
                             </figure>
                             <figcaption class="md:pl-10">
@@ -124,7 +124,7 @@
                     <article class="py-2">
                         <a href="https://capynext.vercel.app/" target="_blank" class="md:flex">
                             <figure>
-                                <img src="../image/capynext.jpg" alt="Banking System Prototype II"
+                                <img src="../image/capynext.jpg" alt="CapyNext"
                                     class="md:max-w-60 transition-transform ease-in-out duration-300 md:hover:scale-110">
                             </figure>
                             <figcaption class="md:pl-10">
@@ -143,7 +143,7 @@
                     <article class="py-2">
                         <a href="https://codingcapy.github.io/capytech-react" target="_blank" class="md:flex">
                             <figure>
-                                <img src="../image/react-project.jpg" alt="Banking System Prototype II"
+                                <img src="../image/react-project.jpg" alt="Capytech React"
                                     class="md:max-w-60">
                             </figure>
                             <figcaption class="md:pl-10">
@@ -158,7 +158,7 @@
                     <article class="py-2">
                         <a href="./portfolio6.html" class="md:flex">
                             <figure>
-                                <img src="../image/red_knight.jpg" alt="Banking System Prototype II"
+                                <img src="../image/red_knight.jpg" alt="JavaScript RPG"
                                     class="md:max-w-60">
                             </figure>
                             <figcaption class="md:pl-10">
@@ -172,7 +172,7 @@
                     <article class="py-2">
                         <a href="./portfolio7.html" class="md:flex">
                             <figure>
-                                <img src="../image/game-design1-1.jpg" alt="Banking System Prototype II"
+                                <img src="../image/game-design1-1.jpg" alt="JavaScript smup"
                                     class="md:max-w-60">
                             </figure>
                             <figcaption class="md:pl-10">
@@ -186,7 +186,7 @@
                     <article class="py-2">
                         <a href="./portfolio8.html" class="md:flex">
                             <figure>
-                                <img src="../image/platform_game.jpg" alt="Banking System Prototype II"
+                                <img src="../image/platform_game.jpg" alt="JavaScript Platform"
                                     class="md:max-w-60">
                             </figure>
                             <figcaption class="md:pl-10">
