--- a/html/portfolio/portfolio7.html
+++ b/html/portfolio/portfolio7.html
@@ -27,8 +27,8 @@
 </head>
 
 <body>
-    <div class="flex flex-col min-h-screen mx-auto px-1 py-1 bg-slate-800 text-white">
-        <header class="md:flex bg-slate-800 sticky top-0 z-50">
+    <div class="flex flex-col min-h-screen mx-auto px-1 bg-slate-800 text-white">
+        <header class="md:flex bg-slate-800 px-2 py-2 sticky top-0 z-50">
             <div class="flex justify-between">
                 <a href="../index.html"><img src="../../html/image/capyness.png" alt="Capytech Icon"
                         class="max-w-10"></a>
