--- a/html/index.html
+++ b/html/index.html
@@ -32,7 +32,7 @@
 </head>
 
 <body>
-    <div class="flex flex-col min-h-screen mx-auto bg-slate-800 text-white">
+    <div class="flex flex-col min-h-screen mx-auto px-1 bg-slate-800 text-white">
         <header class="md:flex bg-slate-800 px-2 py-2 sticky top-0 z-50">
             <div class="flex justify-between">
                 <a href="./index.html"><img src="../html/image/capyness.png" alt="Capytech Icon" class="max-w-10"></a>
@@ -81,7 +81,7 @@
                         </div>
                         <h2 class="text-2xl py-2">Full Stack Software Engineer</h2>
                         <p class="py-2 text-gray-400">I am a full stack developer based in Vancouver, British Columbia,
-                            Canada. I build modern websites using Express.js, Next.js, React.js, and Node.js.</p>
+                            Canada. I build modern websites using React.js, Node.js, Express.js and Next.js,.</p>
                         <div class="flex py-5">
                             <div class=" rounded-md transition ease-in-out duration-300 hover:bg-slate-500">
                                 <a href="https://www.linkedin.com/in/sunghun-kim-19244250/?locale=en_US"
