--- a/html/portfolio/index.html
+++ b/html/portfolio/index.html
@@ -25,8 +25,8 @@
 </head>
 
 <body>
-    <div class="flex flex-col min-h-screen mx-auto px-1 py-1 bg-slate-800 text-white">
-        <header class="md:flex bg-slate-800 sticky top-0 z-50">
+    <div class="flex flex-col min-h-screen mx-auto px-1 bg-slate-800 text-white">
+        <header class="md:flex bg-slate-800 px-2 py-2 sticky top-0 z-50">
             <div class="flex justify-between">
                 <a href="../index.html"><img src="../../html/image/capyness.png" alt="Capytech Icon"
                         class="max-w-10"></a>
@@ -36,7 +36,8 @@
                 <ul class="md:flex">
                     <li
                         class="px-5 py-3 text-center  md:block rounded-md transition ease-in-out duration-300 hover:bg-slate-500">
-                        <a href="../../html/index.html">Home</a></li>
+                        <a href="../../html/index.html">Home</a>
+                    </li>
                     <li
                         class="px-5 py-3 text-center  md:block rounded-md transition ease-in-out duration-300 hover:bg-slate-500">
                         <a href="../../html/portfolio/index.html">Portfolio</a>
@@ -64,7 +65,7 @@
             <div class=" py-2 max-w-6xl mx-auto">
                 <h2 class="text-4xl text-center py-10">Current Projects</h2>
                 <div id="current-projects-section">
-                    <article class="py-2">
+                    <article class="py-2 pb-5">
                         <a href="https://codingcapy.github.io/capychat/" target="_blank" class="md:flex">
                             <figure>
                                 <img src="../image/capychat.jpg" alt="CapyChat"
@@ -74,7 +75,8 @@
                                 <div class="flex">
                                     <h3 class="text-xl text-teal-300 pr-1">Full Stack Chat App </h3>
                                 </div>
-                                <p class="text-gray-400">This project is a fully functional live chat application written in Node Express,
+                                <p class="text-gray-400">This project is a fully functional live chat application
+                                    written in Node Express,
                                     React Vite and PostgreSQL
                                     that
                                     uses json web
@@ -84,7 +86,7 @@
                             </figcaption>
                         </a>
                     </article>
-                    <article class="py-2">
+                    <article class="py-5">
                         <a href="https://codingcapy.github.io/capy-finance-client/" target="_blank" class="md:flex">
                             <figure>
                                 <img src="../image/capyfinance.jpg" alt="CapyFinance"
@@ -99,15 +101,14 @@
                                     that
                                     uses json web
                                     token user authentication and allows users to create financial plans.</p>
-                                <p>Stack: Node, Express, React, ChartJS, Vite, MongoDB, Render</p>
+                                <p class="tertiary-font pt-3">Stack: Node, Express, React, ChartJS, Vite, MongoDB, Render</p>
                             </figcaption>
                         </a>
                     </article>
-                    <article class="py-2">
+                    <article class="py-5">
                         <a href="https://codingcapy.github.io/cocodogo-client/" target="_blank" class="md:flex">
                             <figure>
-                                <img src="../image/capysocial.jpg" alt="Cocodogo"
-                                    class="md:max-w-60">
+                                <img src="../image/capysocial.jpg" alt="Cocodogo" class="md:max-w-60">
                             </figure>
                             <figcaption class="md:pl-10">
                                 <h3 class="text-xl text-teal-300">Reddit Clone Full Stack Web App</h3>
@@ -117,11 +118,11 @@
                                     token user authentication and allows users to post, comment, reply, and vote similar
                                     to
                                     forums like Reddit.</p>
-                                <p>Stack: Node, Express, React, Vite, MongoDB, Railway</p>
+                                <p class="tertiary-font pt-3">Stack: Node, Express, React, Vite, MongoDB, Railway</p>
                             </figcaption>
                         </a>
                     </article>
-                    <article class="py-2">
+                    <article class="py-5">
                         <a href="https://capynext.vercel.app/" target="_blank" class="md:flex">
                             <figure>
                                 <img src="../image/capynext.jpg" alt="CapyNext"
@@ -131,74 +132,72 @@
                                 <div class="flex">
                                     <h3 class="text-xl text-teal-300 pr-1">NextJS Serverless Social Platform</h3>
                                 </div>
-                                <p class="text-gray-400">This project is a full-stack web app written in NextJS 14 and MongoDB
+                                <p class="text-gray-400">This project is a full-stack web app written in NextJS 14 and
+                                    MongoDB
                                     that
-                                    uses next-auth user authentication and allows users to post, comment, reply, and vote similar
+                                    uses next-auth user authentication and allows users to post, comment, reply, and
+                                    vote similar
                                     to
                                     platforms like Reddit.</p>
                                 <p class="tertiary-font pt-3">Stack: NextJS 14, MongoDB, Vercel</p>
                             </figcaption>
                         </a>
                     </article>
-                    <article class="py-2">
+                    <article class="py-5">
                         <a href="https://codingcapy.github.io/capytech-react" target="_blank" class="md:flex">
                             <figure>
-                                <img src="../image/react-project.jpg" alt="Capytech React"
-                                    class="md:max-w-60">
+                                <img src="../image/react-project.jpg" alt="Capytech React" class="md:max-w-60">
                             </figure>
                             <figcaption class="md:pl-10">
                                 <h3 class="text-xl text-teal-300">React Front End Web Project</h3>
                                 <p class="text-gray-400">This project is a website written entirely in React that
                                     simulates the front end of
                                     Youtube.</p>
-                                <p>Stack: Node, Express, React, Vite, MongoDB, Render</p>
+                                <p class="tertiary-font pt-3">Stack: Node, Express, React, Vite, MongoDB, Render</p>
                             </figcaption>
                         </a>
                     </article>
-                    <article class="py-2">
+                    <article class="py-5">
                         <a href="./portfolio6.html" class="md:flex">
                             <figure>
-                                <img src="../image/red_knight.jpg" alt="JavaScript RPG"
-                                    class="md:max-w-60">
+                                <img src="../image/red_knight.jpg" alt="JavaScript RPG" class="md:max-w-60">
                             </figure>
                             <figcaption class="md:pl-10">
                                 <h3 class="text-xl text-teal-300">JavaScript RPG</h3>
                                 <p class="text-gray-400">Click here to play! This project is a JavaScript RPG game I
                                     recently completed.</p>
-                                <p>Stack: HTML5, CSS3, JavaScript ES06, JQuery</p>
+                                <p class="tertiary-font pt-3">Stack: HTML5, CSS3, JavaScript ES06, JQuery</p>
                             </figcaption>
                         </a>
                     </article>
-                    <article class="py-2">
+                    <article class="py-5">
                         <a href="./portfolio7.html" class="md:flex">
                             <figure>
-                                <img src="../image/game-design1-1.jpg" alt="JavaScript smup"
-                                    class="md:max-w-60">
+                                <img src="../image/game-design1-1.jpg" alt="JavaScript smup" class="md:max-w-60">
                             </figure>
                             <figcaption class="md:pl-10">
                                 <h3 class="text-xl text-teal-300">JavaScript Smup</h3>
                                 <p class="text-gray-400">Click here to play! This project is a JavaScript RPG game I
                                     recently completed.</p>
-                                <p>Stack: HTML5, CSS3, JavaScript ES06, JQuery</p>
+                                <p class="tertiary-font pt-3">Stack: HTML5, CSS3, JavaScript ES06, JQuery</p>
                             </figcaption>
                         </a>
                     </article>
-                    <article class="py-2">
+                    <article class="py-5">
                         <a href="./portfolio8.html" class="md:flex">
                             <figure>
-                                <img src="../image/platform_game.jpg" alt="JavaScript Platform"
-                                    class="md:max-w-60">
+                                <img src="../image/platform_game.jpg" alt="JavaScript Platform" class="md:max-w-60">
                             </figure>
                             <figcaption class="md:pl-10">
                                 <h3 class="text-xl text-teal-300">JavaScript Platform</h3>
                                 <p class="text-gray-400">Click here to play! This project is a JavaScript platform game
                                     I recently completed.
                                 </p>
-                                <p>Stack: HTML5, CSS3, JavaScript ES06, JQuery</p>
+                                <p class="tertiary-font pt-3">Stack: HTML5, CSS3, JavaScript ES06, JQuery</p>
                             </figcaption>
                         </a>
                     </article>
-                    <article class="py-2">
+                    <article class="py-5">
                         <a href="https://codingcapy.github.io/jellyfishforest/html/index.html" target="_blank"
                             class="md:flex">
                             <figure>
@@ -218,7 +217,7 @@
                             </figcaption>
                         </a>
                     </article>
-                    <article class="py-2">
+                    <article class="py-5">
                         <a href="./portfolio3.html" class="md:flex">
                             <figure>
                                 <img src="../image/banking-sys-prototype.jpg" alt="Banking System Prototype"
@@ -230,6 +229,7 @@
                                     I have decided to
                                     make a personal
                                     project of building a banking system prototype that also functions as a CRM.</p>
+                                    <p class="tertiary-font pt-3">Stack: Java, WindowBuilder, Swing</p>
                             </figcaption>
                         </a>
                     </article>
@@ -237,33 +237,35 @@
                 <h2 class="text-4xl text-center py-10">GameProjects</h2>
                 <p>The following are game dev projects I have worked on by myself
                 <div id="pygames-section">
-                    <article class="py-2">
+                    <article class="py-5">
                         <a href="./portfolio4.html" class="md:flex">
                             <figure>
                                 <video src="../video/capy-game-design3.mp4" controls class="md:max-w-60"></video>
                             </figure>
                             <figcaption class="md:pl-10">
                                 <h4 class="text-xl text-teal-300">2D ARPG Project</h4>
-                                <p>This is actually my third game development project, all written in Python and using
+                                <p class="text-gray-400">This is actually my third game development project, all written in Python and using
                                     the pygame
                                     library. This project taught me animations, screen scrolling, and tile generation.
                                     This is still
                                     a
                                     work in progress, and I am still adding features and working on balancing.</p>
+                                <p class="tertiary-font pt-3">Stack: Python, Pygame</p>
                             </figcaption>
                         </a>
                     </article>
-                    <article class="py-2">
+                    <article class="py-5">
                         <a href="./portfolio5.html" class="md:flex">
                             <figure>
                                 <video src="../video/capy-game-design1.mp4" controls class="md:max-w-60"></video>
                             </figure>
                             <figcaption class="md:pl-10">
                                 <h4 class="text-xl text-teal-300">2D Shoot'em-up Project</h4>
-                                <p>This is my second game development project, fully written in Python and using the
+                                <p class="text-gray-400">This is my second game development project, fully written in Python and using the
                                     pygame library. I learned to procedurally generate enemies through this project. I
                                     am considering adding more features such as loot drops, upgrades, and boss addition
                                     in the future.</p>
+                                    <p class="tertiary-font pt-3">Stack: Python, Pygame</p>
                             </figcaption>
                         </a>
                     </article>
