--- a/html/index.html
+++ b/html/index.html
@@ -81,7 +81,7 @@
                         </div>
                         <h2 class="text-2xl py-2">Full Stack Software Engineer</h2>
                         <p class="py-2 text-gray-400">I am a full stack developer based in Vancouver, British Columbia,
-                            Canada. I build modern websites using React.js, Node.js, Express.js and Next.js,.</p>
+                            Canada. I build modern websites using React.js, Node.js, Express.js and Next.js.</p>
                         <div class="flex py-5">
                             <div class=" rounded-md transition ease-in-out duration-300 hover:bg-slate-500">
                                 <a href="https://www.linkedin.com/in/sunghun-kim-19244250/?locale=en_US"
